--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sex and Gender Wikipedia Guide
 description: Guide to wikipedia on sex and gender issues
-theme: just-the-docs
+remote_theme: https://github.com/just-the-docs/just-the-docs
 
 url: https://witchspace.github.io/sexandgenderwiki
 
